[project]
name = "cpnits_check11"
version = "0.1.0"
authors = [
  { name="Victor G.B. Peters", email="victor@jeex.eu" },
]
description = "Client side of Check11 service for CPNITS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
check11 = "src.cpnits_check11.check11"

[project.urls]
Homepage = "https://github.com/jeex/check11"
Issues = "https://github.com/jeex/check11/issues"